--- a/legal_advice_project/index.html
+++ b/legal_advice_project/index.html
@@ -7,6 +7,12 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <!-- Background video: placed before the app root so it's behind React content -->
+    <video id="bg-video" autoplay muted loop playsinline aria-hidden="true" tabindex="-1">
+      <source src="/src/assets/bg_n1.mp4" type="video/mp4" />
+      <!-- Fallback text -->
+      Your browser does not support the video tag.
+    </video>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
