--- a/legal_advice_project/index.html
+++ b/legal_advice_project/index.html
@@ -14,6 +14,8 @@
       Your browser does not support the video tag.
     </video>
     <div id="root"></div>
+    <!-- OpenCV.js (用于边缘检测/轮廓识别) -->
+    <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
